2014-03-28  Richard Frith-Macdonald <rfm@gnu.org>

	* EcTest.h:
	* EcTest.m:
	* EcProcess.m:
	* GNUmakefile:
	Add a few simple functions to connect to a process, set/get the
	config of a running process, and issue commands (and get back
	the response) so that regression test software can relatively
	easily exercie an entire system.

2014-03-26  Richard Frith-Macdonald <rfm@gnu.org>

	* EcControl.m: Add option to allow any user to log in.

2014-03-25  Richard Frith-Macdonald <rfm@gnu.org>

	* EcConsole.m: Don't read from stdin whn in non-interactive mode
	* EcProcess.m: Allow up to ten seconds to Contact Command server
	on startup.

2014-03-18  Richard Frith-Macdonald <rfm@gnu.org>

	* ECCL.h:
	* EcCommand.m:
	* EcConsole.m:
	* GNUmakefile:
	Extend Console tool to support non-interactive use for scripting etc.

2014-02-28  Richard Frith-Macdonald <rfm@gnu.org>

	* EcControl.m:
	* ECCL.h:
	Extend system so the Terminate tool can contact the Control server
	and shut down the entire cluster rather than just a singlee host.

2014-02-22  Richard Frith-Macdonald <rfm@gnu.org>

	* EcAlarmDestination.h:
	* EcAlarmDestination.m:
	When clearing an alarm, forward the clear to the next destination
	unless we have already done so.
	When unmanaging a managed object, remove internal records of cleared
	and active alarms for that managed object.

2014-01-16  Richard Frith-Macdonald <rfm@gnu.org>

        * EcProcess.m:
        * EcAlarmDestination.h:
        * EcAlarmDestination.m:
	Remove experimental force clear method ... obey the KISS rule and
	stick to using domanange and unmanage methods for clearing on
	startup/shutdown. People wanting alars which persist after process
	shutdown should create a secondary managed object for them.

2013-11-04  Richard Frith-Macdonald <rfm@gnu.org>

        * EcProcess.m:
        * EcCommand.m:
        * EcClientI.h:
        * EcClientI.m:
        * EcAlarmDestination.h:
        Change error/alert logs to use alarm mechanism instead.
